Updated footer by aligning everything. Adjusted contains in bio section with paddding. Fixed resposiveness for all images. Updated all links. Organized my variables to correct naming. Cleaned up html and scss.

--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,31 +1,13 @@
-// HEADER SECTION
-$headercolor: #323232;
-
-// FOOTER SECTION
-
-$footercolor: #323232;
-$footertextcolor: white;
-
-// PHOTOGALLERY
-$photogallerybg: #fafafa;
-
 // RESPONSIVE SECTION
 $tablet-breakpoint: 48rem;
-
 $desktop-breakpoint: 80rem;
 
-// typography
-
-$navbarfontcolor: white;
-
-$biocolor: #323232;
-
-// @include tablet {
-
-// }
-// @include desktop {
-// }
 // PRIMARY COLORS
 $BandSite-Black: #323232;
+$Silver: #afafaf;
+$White: #ffffff;
 
 // SECONDARY COLORS
+$BandSite-DarkBlack: #000000;
+$Mercury: #e1e1e1;
+$Alabaster: #fafafa;
